# Fullstack-proyecto

./: README.md
backend/: alembic.ini  pyproject.toml  requirements.txt
backend/app/: config.py  main.py
backend/app/model/: mixins.py  person.py  role.py  user_role.py  users.py
backend/migrations/: env.py
