[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["EXlena7-7 <marjor071101@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
uvicorn = "^0.30.5"
fastapi = "^0.112.0"
sqlalchemy = "^2.0.31"
sqlmodel = "^0.0.21"
asyncpg = "^0.29.0"
psycopg2 = "^2.9.9"
alembic = "^1.13.2"
pydantic = "^2.8.2"
poetry-plugin-export = "^1.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start="app.main:start"